# AI-code-generation

./: .gitignore  AGENTS.md  AGENT_ANALYSIS_SUMMARY.txt  AGENT_OPTIMIZATION.md  AGENT_STATUS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_DEBT.md  CODE_INSPECTION_REPORT_20260201-221959.md  CODE_INSPECTION_SUMMARY_20260201.md  CODE_REVIEW_20260201-220539.md  Cargo.toml  DEADLOCK_RECOVERY_2026-02-01.md  DIRECTOR_REPORT.md  EVOLUTION.md  EXEC-BEST-PRACTICES.md  FINAL_ARCHITECTURE.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  Makefile  NOW.md  PATROL_ALERTS.md  PRODUCT_ANALYSIS.md  PROJECT_ARCHITECTURE.md  README.md  SOUL.md  TASK_QUEUE.md  TEST_REGRESSION_FAILURE.md  TEST_REGRESSION_REPORT.md  TOOLS-QUICK-REF.md  TOOLS.md  USER.md  agent-dashboard.sh  dashboard.html  docker-compose.mysql.yml  go.mod  go.sum  projects.json  spec_input.txt
.github/workflows/: frontend.yml  smoke-fans.yml  speccheck.yml
.spec-workflow/sources/: 策划.md
.spec-workflow/steering/: product.md  structure.md  tech.md
archive/reports-2026-02/: AGENT_STATUS.md  CODE_DEBT.md  CODE_INSPECTION_DETAILED.md  CODE_INSPECTION_REPORT_20260201.md  CODE_REVIEW_20260201-221535.md  COMMANDER.md  (+9 more)
config/: db.yaml
crates/autonomous_agent/: Cargo.toml
crates/autonomous_agent/src/: executor.rs  lib.rs  multi_ai.rs  progress.rs  task_planner.rs
crates/cc_switch/: Cargo.toml
crates/cc_switch/src/: api_client.rs  cc_switch.rs  cc_switch_panel.rs  cc_switch_settings.rs  config_sync.rs  models.rs  persistence.rs
crates/cc_switch/src/views/: add_mcp_server_modal.rs  add_provider_modal.rs  add_skill_modal.rs  mcp_view.rs  mod.rs  providers_view.rs  skills_view.rs
crates/i18n/: Cargo.toml
crates/i18n/locales/en-US/: main.ftl
crates/i18n/locales/zh-CN/: main.ftl
crates/i18n/src/: lib.rs  loader.rs  locale.rs
crates/multi_model_dispatch/: Cargo.toml
crates/multi_model_dispatch/src/: dispatcher.rs  lib.rs  multi_model_dispatch.rs  settings.rs
crates/multi_model_dispatch/src/agent/: agent.rs  mod.rs
crates/multi_model_dispatch/src/views/: agent_list_view.rs  mod.rs
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTEXT_AND_KNOWLEDGE_SYSTEM.md  EVOLUTION_FRAMEWORK.md  I18N_STATUS.md  PERFORMANCE_ANALYSIS.md  PROJECT_STATUS.md  QUICKSTART.md  TASK_COMPLETION_REPORT.md  TASK_SYSTEM_V2.md  TOOLS-CHEATSHEET.md  file-organization-guide.md  large-output-guide.md  model-selection-guide.md  skills-recommendations.md  token-saving-guide.md
frontend/: README.md  clarify-export-smoke.mjs  clarify-smoke-combined.mjs  clarify-smoke.mjs  eslint.config.js  index.html  package-lock.json  package.json  smoke.mjs  vite.config.ts
memory/: 2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-07.md  cache_test_key.json  evolution-log.md  heartbeat-state.json  nightly-build-state.json
orchestrator/: cache.sh  config.json  dispatch.sh  process_output.sh  recover.sh
scheduler/: config.json  scheduler.js  scheduler.sh
scripts/: agent-health.sh  auto-dispatch.sh  auto-learn.sh  auto-optimize.sh  code-review.sh  director.sh  evo  evolution-v3.sh  evolution-v4.sh  knowledge.sh  log-analyzer.sh  metrics.sh  pg-memory.sh  predictor.sh  preview.sh  progress-tracker.sh  rollback.sh  session-compress.sh  smart-router-v2.sh  start-agents.sh  task-decomposer.sh  task-executor.sh  unified-scheduler.sh  workflow-check.sh
state/: machine.json
templates/: task-prompt.md
temporal-workflows/: package-lock.json  package.json
(+775 files in other folders)
