[package]
name = "cc_switch"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/cc_switch.rs"
doctest = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
dirs = "5.0"
credentials_provider.workspace = true
db.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
i18n.workspace = true
indexmap.workspace = true
log.workspace = true
menu.workspace = true
open.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
settings.workspace = true
sha2.workspace = true
theme.workspace = true
tiny_http.workspace = true
toml = "0.8"
toml_edit = "0.22"
ui.workspace = true
ui_input.workspace = true
url.workspace = true
util.workspace = true
urlencoding.workspace = true
workspace.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
serde_json.workspace = true
tempfile.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]
