[package]
name = "multi_model_dispatch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
gpui = { path = "../../crates/gpui" }
ui = { path = "../../crates/ui" }
ui_input = { path = "../../crates/ui_input" }
workspace = { path = "../../crates/workspace" }
settings = { path = "../../crates/settings" }
theme = { path = "../../crates/theme" }
util = { path = "../../crates/util" }
editor = { path = "../../crates/editor" }
language = { path = "../../crates/language" }
collections = { path = "../../crates/collections" }
db = { path = "../../crates/db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
futures = "0.3"
parking_lot = "0.12"
schemars = "0.8"
client = { path = "../../crates/client" }
project = { path = "../../crates/project" }
clock = { path = "../../crates/clock" }
uuid = { version = "1.3", features = ["v4"] }
language_model = { path = "../../crates/language_model" }

